added tabs logic

--- a/source/index.html
+++ b/source/index.html
@@ -87,7 +87,7 @@
             </div>
         </section>
         <section class="main__section tabs-section">
-            <div class="tabs-section__wrapper">
+            <div class="tabs-section__wrapper" id="tabs">
                 <h2 class="tabs-section__title title">Проектная документация <br> любой сложности под ключ</h2>
                 <div class="tabs-section__tabs tabs">
                     <button class="tabs__menu-button tabs__menu-button--prev">
@@ -98,17 +98,17 @@
                     </button>
                     <ul class="tabs__menu swiper-wrapper">
                         <li class="tabs__menu-item swiper-slide">
-                            <a class="tabs__link">Градостроительство</a>
+                            <a class="tabs__link" :class="{ 'tabs__link--active' : isCurrent(0) }" @click="setCurrent(0)">Градостроительство</a>
                         </li>
                         <li class="tabs__menu-item swiper-slide">
-                            <a class="tabs__link tabs__link--active">Инженерное обеспечение зданий <br> и сооружений</a>
+                            <a class="tabs__link" :class="{ 'tabs__link--active' : isCurrent(1) }" @click="setCurrent(1)">Инженерное обеспечение зданий <br> и сооружений</a>
                         </li>
                         <li class="tabs__menu-item swiper-slide">
-                            <a class="tabs__link">Безопасность</a>
+                            <a class="tabs__link" :class="{ 'tabs__link--active' : isCurrent(2) }" @click="setCurrent(2)">Безопасность</a>
                         </li>
                     </ul>
                     <ul class="tabs__list">
-                        <li class="tabs__item tab">
+                        <li class="tabs__item tab" :class="{ 'tabs__item--active' : isCurrent(0) }">
                             <h3 class="visually-hidden">Градостроительство</h3>
                             <ul class="tab__features-list">
                                 <li class="tab__features-item">
@@ -125,7 +125,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="tabs__item tab">
+                        <li class="tabs__item tab" :class="{ 'tabs__item--active' : isCurrent(1) }">
                             <h3 class="visually-hidden">Инженерное обеспечение зданий и сооружений</h3>
                             <ul class="tab__features-list">
                                 <li class="tab__features-item">
@@ -154,7 +154,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="tabs__item tab">
+                        <li class="tabs__item tab" :class="{ 'tabs__item--active' : isCurrent(2) }">
                             <h3 class="visually-hidden">Безопасность</h3>
                             <ul class="tab__features-list">
                                 <li class="tab__features-item">
