finished mobile tabs

--- a/source/index.html
+++ b/source/index.html
@@ -186,7 +186,7 @@
                             </ul>
                         </li>        
                     </ul>
-                    <button class="button-blue">Получить консультацию</button>
+                    <button class="button-blue button-blue--full">Получить консультацию</button>
                 </div>
             </div>
         </section>
