Finished important section

--- a/source/index.html
+++ b/source/index.html
@@ -195,25 +195,25 @@
                 <h2 class="important-section__title title">Мы понимаем, что для вас важно</h2>
                 <ul class="important-section__list important">
                     <li class="important__item">
-                        <p class="important__text">Адекватная цена за высокое качество</p>
+                        <p class="important__text">Адекватная цена <br> за высокое качество</p>
                     </li>
                     <li class="important__item">
                         <p class="important__text">Соблюдение сроков подготовки документации</p>
                     </li>
-                    <li class="important__item">
+                    <li class="important__item important__item--three-lines">
                         <p class="important__text">Соответствие проектной документации действующим нормативным документам</p>
                     </li>
-                    <li class="important__item">
+                    <li class="important__item important__item--sub">
                         <p class="important__text">Авторский надзор за строительством</p>
                         <p class="important__subtext">(Контроль соответствия строительно-монтажных работ проектной документации)</p>
                     </li>
-                    <li class="important__item">
+                    <li class="important__item important__item--many-lines">
                         <p class="important__text">Сопровождение проектной документации на всех стадиях</p>
                         <p class="important__subtext">(Сбор и подготовка исходных данных, проведение инженерных изысканий (геология, геодезия), прохождение экспертизи проектно-сметной документации)</p>
                     </li>
                 </ul>
-                <p class="important-section__text">Предоставляем качественные услуги по проектной документации. <span class="orange">Мы более 7 лет на рынке!</span> Работая с нами, вы получите проект для любого вида строительства. Просто оформите заявку и ждите звонка нашего консультанта. Мы сделаем вам лучшее предложение!</p>
-                <button class="button-blue">Оформить заявку</button>
+                <p class="important-section__text">Предоставляем качественные услуги по проектной документации. <span class="orange orange--oneline">Мы более 7 лет на рынке!</span> Работая с нами, вы получите проект для любого вида строительства. Просто оформите заявку и ждите звонка нашего консультанта. Мы сделаем вам лучшее предложение!</p>
+                <button class="button-blue button-blue--arrow">Оформить заявку</button>
             </div>
         </section>
         <section class="main__section ready-section">
