added projet swiper

--- a/source/index.html
+++ b/source/index.html
@@ -221,36 +221,56 @@
                 <h2 class="ready-section__title title">Готовые проекты</h2>
                 <ul class="ready-section__list">
                     <li class="ready-section__item project">
-                        <div class="project__img-container img-container">
-                            <ul class="img-container__list">
-                                <li class="img-container__item">
+                        <div id="container" class="project__img-container img-container">
+                            <ul class="img-container__list swiper-wrapper">
+                                <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary.webp 1x, img/brovary.webp 2x">
+                                        <source type="image/webp" srcset="img/brovary.webp 1x, img/brovary.webp 2x">
 
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
+                                        <source media="(min-width: 786px)" srcset="img/brovary.webp 1x, img/brovary.webp 2x">
+                                        <img src="img/brovary.jpg" alt="Pd" srcset="img/brovary.jpg 2x">
                                     </picture>
                                 </li>
-                                <li class="img-container__item">
+                                <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-2.webp 1x, img/brovary.webp 2x">
+                                        <source type="image/webp" srcset="img/brovary-2.webp 1x, img/brovary-2.webp 2x">
 
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
+                                        <source media="(min-width: 786px)" srcset="img/brovary-2.jpeg 1x, img/brovary-2.jpeg 2x">
+                                        <img src="img/brovary-2.jpg" alt="Pd" srcset="img/brovary-2.jpg 2x">
                                     </picture>
                                 </li>
-                                <li class="img-container__item">
+                                <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-3.webp 1x, img/brovary.webp 2x">
+                                        <source type="image/webp" srcset="img/brovary-3.webp 1x, img/brovary-3.webp 2x">
 
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
+                                        <source media="(min-width: 786px)" srcset="img/brovary-3.jpeg 1x, img/brovary-3.jpeg 2x">
+                                        <img src="img/brovary-3.jpg" alt="Pd" srcset="img/brovary-3.jpg 2x">
+                                    </picture>
+                                </li>
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-4.webp 1x, img/brovary.webp 2x">
+                                        <source type="image/webp" srcset="img/brovary-4.webp 1x, img/brovary-4.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/brovary-4.jpeg 1x, img/brovary-4.jpeg 2x">
+                                        <img src="img/brovary-4.jpg" alt="Pd" srcset="img/brovary-4.jpg 2x">
+                                    </picture>
+                                </li>
+                                <li class="img-container__item swiper-slide">
+                                    <picture>
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-5.webp 1x, img/brovary-5.webp 2x">
+                                        <source type="image/webp" srcset="img/brovary-5.webp 1x, img/brovary-5.webp 2x">
+
+                                        <source media="(min-width: 786px)" srcset="img/brovary-5.jpeg 1x, img/brovary-5.jpeg 2x">
+                                        <img src="img/brovary-5.jpg" alt="Pd" srcset="img/brovary-5.jpg 2x">
                                     </picture>
                                 </li>
                             </ul>
+                            <div class="img-container__pag">
+                            </div>
                         </div>
                         <h3 class="project__title">Строительство торгово-офисного здания и гаража с встроенными бытовыми помещениями. Киевская область. Бровары.</h3>
                         <ul class="project__features-list">
