--- a/source/index.html
+++ b/source/index.html
@@ -226,46 +226,46 @@
                                 <li class="img-container__item swiper-slide">
                                     <picture>
                                         <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary.webp 1x, img/brovary.webp 2x">
-                                        <source type="image/webp" srcset="img/brovary.webp 1x, img/brovary.webp 2x">
+                                        <source type="image/webp" srcset="img/brovary-mobile.webp 1x, img/brovary-mobile.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary.webp 1x, img/brovary.webp 2x">
-                                        <img src="img/brovary.jpg" alt="Pd" srcset="img/brovary.jpg 2x">
+                                        <img src="img/brovary-mobile.jpg" alt="Pd" srcset="img/brovary-mobile.jpg 2x">
                                     </picture>
                                 </li>
                                 <li class="img-container__item swiper-slide">
                                     <picture>
                                         <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-2.webp 1x, img/brovary.webp 2x">
-                                        <source type="image/webp" srcset="img/brovary-2.webp 1x, img/brovary-2.webp 2x">
+                                        <source type="image/webp" srcset="img/brovary-mobile-2.webp 1x, img/brovary-mobile-2.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary-2.jpeg 1x, img/brovary-2.jpeg 2x">
-                                        <img src="img/brovary-2.jpg" alt="Pd" srcset="img/brovary-2.jpg 2x">
+                                        <img src="img/brovary-mobile-2.jpg" alt="Pd" srcset="img/brovary-mobile-2.jpg 2x">
                                     </picture>
                                 </li>
                                 <li class="img-container__item swiper-slide">
                                     <picture>
                                         <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-3.webp 1x, img/brovary.webp 2x">
-                                        <source type="image/webp" srcset="img/brovary-3.webp 1x, img/brovary-3.webp 2x">
+                                        <source type="image/webp" srcset="img/brovary-mobile-3.webp 1x, img/brovary-mobile-3.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary-3.jpeg 1x, img/brovary-3.jpeg 2x">
-                                        <img src="img/brovary-3.jpg" alt="Pd" srcset="img/brovary-3.jpg 2x">
+                                        <img src="img/brovary-mobile-3.jpg" alt="Pd" srcset="img/brovary-mobile-3.jpg 2x">
                                     </picture>
                                 </li>
                                 <li class="img-container__item swiper-slide">
                                     <picture>
                                         <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-4.webp 1x, img/brovary.webp 2x">
-                                        <source type="image/webp" srcset="img/brovary-4.webp 1x, img/brovary-4.webp 2x">
+                                        <source type="image/webp" srcset="img/brovary-mobile-4.webp 1x, img/brovary-mobile-4.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary-4.jpeg 1x, img/brovary-4.jpeg 2x">
-                                        <img src="img/brovary-4.jpg" alt="Pd" srcset="img/brovary-4.jpg 2x">
+                                        <img src="img/brovary-mobile-4.jpg" alt="Pd" srcset="img/brovary-mobile-4.jpg 2x">
                                     </picture>
                                 </li>
                                 <li class="img-container__item swiper-slide">
                                     <picture>
                                         <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-5.webp 1x, img/brovary-5.webp 2x">
-                                        <source type="image/webp" srcset="img/brovary-5.webp 1x, img/brovary-5.webp 2x">
+                                        <source type="image/webp" srcset="img/brovary-mobile-5.webp 1x, img/brovary-mobile-5.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary-5.jpeg 1x, img/brovary-5.jpeg 2x">
-                                        <img src="img/brovary-5.jpg" alt="Pd" srcset="img/brovary-5.jpg 2x">
+                                        <img src="img/brovary-mobile-5.jpg" alt="Pd" srcset="img/brovary-mobile-5.jpg 2x">
                                     </picture>
                                 </li>
                             </ul>
