Finished mobile swipers section

--- a/source/index.html
+++ b/source/index.html
@@ -221,7 +221,7 @@
                 <h2 class="ready-section__title title">Готовые проекты</h2>
                 <ul class="ready-section__list">
                     <li class="ready-section__item project">
-                        <div id="container" class="project__img-container img-container">
+                        <div class="project__img-container img-container containerOne">
                             <ul class="img-container__list swiper-wrapper">
                                 <li class="img-container__item swiper-slide">
                                     <picture>
@@ -234,7 +234,7 @@
                                 </li>
                                 <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-2.webp 1x, img/brovary.webp 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-2.webp 1x, img/brovary-2.webp 2x">
                                         <source type="image/webp" srcset="img/brovary-mobile-2.webp 1x, img/brovary-mobile-2.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary-2.jpeg 1x, img/brovary-2.jpeg 2x">
@@ -243,7 +243,7 @@
                                 </li>
                                 <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-3.webp 1x, img/brovary.webp 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-3.webp 1x, img/brovary-3.webp 2x">
                                         <source type="image/webp" srcset="img/brovary-mobile-3.webp 1x, img/brovary-mobile-3.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary-3.jpeg 1x, img/brovary-3.jpeg 2x">
@@ -252,7 +252,7 @@
                                 </li>
                                 <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-4.webp 1x, img/brovary.webp 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/brovary-4.webp 1x, img/brovary-4.webp 2x">
                                         <source type="image/webp" srcset="img/brovary-mobile-4.webp 1x, img/brovary-mobile-4.webp 2x">
 
                                         <source media="(min-width: 786px)" srcset="img/brovary-4.jpeg 1x, img/brovary-4.jpeg 2x">
@@ -269,7 +269,7 @@
                                     </picture>
                                 </li>
                             </ul>
-                            <div class="img-container__pag">
+                            <div class="img-container__pag img-container__pag--one">
                             </div>
                         </div>
                         <h3 class="project__title">Строительство торгово-офисного здания и гаража с встроенными бытовыми помещениями. Киевская область. Бровары.</h3>
@@ -279,36 +279,20 @@
                         </ul>
                     </li>
                     <li class="ready-section__item project">
-                        <div class="project__img-container img-container">
-                            <ul class="img-container__list">
-                                <li class="img-container__item">
+                        <div class="project__img-container img-container containerTwo">
+                            <ul class="img-container__list swiper-wrapper">
+                                <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/school.webp 1x, img/school.webp 2x">
+                                        <source type="image/webp" srcset="img/school-mobile.webp 1x, img/school-mobile.webp 2x">
 
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
-                                    </picture>
-                                </li>
-                                <li class="img-container__item">
-                                    <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
-
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
-                                    </picture>
-                                </li>
-                                <li class="img-container__item">
-                                    <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
-
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
+                                        <source media="(min-width: 786px)" srcset="img/school.jpg 1x, img/school.jpg 2x">
+                                        <img src="img/school-mobile.jpg" alt="Система вентиляции школы" srcset="img/school-mobile.jpg 2x">
                                     </picture>
                                 </li>
                             </ul>
+                            <div class="img-container__pag img-container__pag--two">
+                            </div>
                         </div>
                         <h3 class="project__title">Ремонт системы вентиляции объекта - пищеблок Криворожской общеобразовательной школы №58.</h3>
                         <ul class="project__features-list">
@@ -317,36 +301,38 @@
                         </ul>
                     </li>
                     <li class="ready-section__item project">
-                        <div class="project__img-container img-container">
-                            <ul class="img-container__list">
-                                <li class="img-container__item">
+                        <div class="project__img-container img-container containerThree">
+                            <ul class="img-container__list swiper-wrapper">
+                                <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/heating.webp 1x,img/heating.webp  2x">
+                                        <source type="image/webp" srcset="img/heating-mobile.webp 1x,img/heating-mobile.webp  2x">
 
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
+                                        <source media="(min-width: 786px)" srcset="img/heating.jpg 1x, img/heating.jpg 2x">
+                                        <img src="img/heating-mobile.jpg" alt="Система отопления" srcset="img/heating-mobile.jpg 2x">
                                     </picture>
                                 </li>
-                                <li class="img-container__item">
+                                <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/heating-2.webp 1x,img/heating-2.webp  2x">
+                                        <source type="image/webp" srcset="img/heating-mobile-2.webp 1x,img/heating-mobile-2.webp  2x">
 
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
+                                        <source media="(min-width: 786px)" srcset="img/heating-2.jpg 1x, img/heating-2.jpg 2x">
+                                        <img src="img/heating-mobile-2.jpg" alt="Система отопления" srcset="img/heating-mobile-2.jpg 2x">
                                     </picture>
                                 </li>
-                                <li class="img-container__item">
+                                <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/heating-3.webp 1x,img/heating-3.webp  2x">
+                                        <source type="image/webp" srcset="img/heating-mobile-3.webp 1x,img/heating-mobile-3.webp  2x">
 
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
+                                        <source media="(min-width: 786px)" srcset="img/heating-3.jpg 1x, img/heating-3.jpg 2x">
+                                        <img src="img/heating-mobile-3.jpg" alt="Система отопления" srcset="img/heating-mobile-3.jpg 2x">
                                     </picture>
                                 </li>
                             </ul>
+                            <div class="img-container__pag img-container__pag--three">
+                            </div>
                         </div>
                         <h3 class="project__title">Реконструкция системы отопления с установлением котлов на твердо топливе как альтернативного источника тепло здания центрального корпуса инв. №10310001</h3>
                         <ul class="project__features-list">
@@ -355,36 +341,38 @@
                         </ul>
                     </li>
                     <li class="ready-section__item project">
-                        <div class="project__img-container img-container">
-                            <ul class="img-container__list">
-                                <li class="img-container__item">
+                        <div class="project__img-container img-container containerFour">
+                            <ul class="img-container__list swiper-wrapper">
+                                <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/gas.webp 1x, img/gas.webp 2x">
+                                        <source type="image/webp" srcset="img/gas-mobile.webp 1x, img/gas-mobile.webp 2x">
 
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
+                                        <source media="(min-width: 786px)" srcset="img/gas.jpg 1x, img/gas.jpg 2x">
+                                        <img src="img/gas-mobile.jpg" alt="Поставка газа в котельную" srcset="img/gas-mobile.jpg 2x">
                                     </picture>
                                 </li>
-                                <li class="img-container__item">
+                                <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/gas-1.webp 1x, img/gas-1.webp 2x">
+                                        <source type="image/webp" srcset="img/gas-mobile-1.webp 1x, img/gas-mobile-1.webp 2x">
 
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
+                                        <source media="(min-width: 786px)" srcset="img/gas-1.jpg 1x, img/gas-1.jpg 2x">
+                                        <img src="img/gas-mobile-1.jpg" alt="Поставка газа в котельную" srcset="img/gas-mobile-1.jpg 2x">
                                     </picture>
                                 </li>
-                                <li class="img-container__item">
+                                <li class="img-container__item swiper-slide">
                                     <picture>
-                                        <source media="(min-width: 786px)" type="image/webp" srcset="1x, 2x">
-                                        <source type="image/webp" srcset="1x, 2x">
+                                        <source media="(min-width: 786px)" type="image/webp" srcset="img/gas-2.webp 1x, img/gas-2.webp 2x">
+                                        <source type="image/webp" srcset="img/gas-mobile-2.webp 1x, img/gas-mobile-2.webp 2x">
 
-                                        <source media="(min-width: 786px)" srcset="1x, 2x">
-                                        <img src="" alt="" srcset="2x">
+                                        <source media="(min-width: 786px)" srcset="img/gas-2.jpg 1x, img/gas-2.jpg 2x">
+                                        <img src="img/gas-mobile-2.jpg" alt="Поставка газа в котельную" srcset="img/gas-mobile-2.jpg 2x">
                                     </picture>
                                 </li>
                             </ul>
+                            <div class="img-container__pag img-container__pag--four">
+                            </div>
                         </div>
                         <h3 class="project__title">Газоснабжение котельной «Городская больница №5.» КПТМ  «Криворожтеплосеть»</h3>
                         <ul class="project__features-list">
