results section mobile

--- a/source/index.html
+++ b/source/index.html
@@ -388,9 +388,12 @@
                 <h2 class="about-section__title title">О компании</h2>
                 <p class="about-section__company"><span class="orange">Базис-КР</span> - компания профессиональных инженеров, влюбленных в свою работу. Мы более 7 лет на рынке. С первого дня мы приняли позицию - <span class="orange">не продавать любые решения, лишь бы заработать денег, а сделать качественные проекты, которыми могли бы гордится.</span></p>
                 <div class="about-section__results results">
-                    <p class="results__text">
-                        <span>Этого правила придерживаемся в своей работе и по сей день: делаем эксклюзивные проекты, которые сочетают в себе красоту и функциональность.</span> Возможно, это не скромно, но проекты такого же высокого качества, как мы, делают только единицы. И каждый наш клиент, партнер или конкурент подтвердит, что дотошность к каждому элементу и исполнительность - визитная карточка Базис-КР. Сотрудничество с нами - простой и эффективный способ создания проектной документации любой сложности. Возможность использовать современыне разработки в программном обеспечении, создавать проекты в формате 3D. Обратившись к нам, вы снимаете с себя все проблемы, связанные с проектированием и согласованием. Также мы обеспечиваем должную поддержку во время строительства. Сопровождаем проект на всех стадиях, дабы избежать сюрпризов в перспективе. 
-                    </p>
+                    <div class="results__text">
+                        <p class="results__paragraph">Этого правила придерживаемся в своей работе и по сей день: делаем эксклюзивные проекты, которые сочетают в себе красоту и функциональность.</p>
+                        <p class="results__paragraph">Возможно, это не скромно, но проекты такого же высокого качества, как мы, делают только единицы. И каждый наш клиент, партнер или конкурент подтвердит, что дотошность к каждому элементу и исполнительность - визитная карточка Базис-КР.</p>
+                        <p class="results__paragraph">Сотрудничество с нами - простой и эффективный способ создания проектной документации любой сложности. Возможность использовать современыне разработки в программном обеспечении, создавать проекты в формате 3D.</p>
+                        <p class="results__paragraph">Обратившись к нам, вы снимаете с себя все проблемы, связанные с проектированием и согласованием. Также мы обеспечиваем должную поддержку во время строительства. Сопровождаем проект на всех стадиях, дабы избежать сюрпризов в перспективе.</p> 
+                    </div>
                     <ul class="results__list">
                         <li class="results__item">
                             <span class="results__number">256</span> проектов    
